@@ -45,7 +45,7 @@ import org.gjt.sp.util.Log;
 /**
  * The main class of the jEdit text editor.
  * @author Slava Pestov
- * @version $Id: jEdit.java,v 1.126 2003/04/13 01:35:13 spestov Exp $
+ * @version $Id: jEdit.java,v 1.127 2003/04/14 03:59:21 spestov Exp $
  */
 public class jEdit
 {
@@ -1793,6 +1793,34 @@ public class jEdit
 	public static Buffer getLastBuffer()
 	{
 		return buffersLast;
+	} //}}}
+
+	//{{{ checkBufferStatus() method
+	/**
+	 * Checks each buffer's status on disk and shows the dialog box
+	 * informing the user that buffers changed on disk, if necessary.
+	 * @param view The view
+	 * @since jEdit 4.2pre1
+	 */
+	public static void checkBufferStatus(View view)
+	{
+		Buffer[] buffers = jEdit.getBuffers();
+		int[] states = new int[buffers.length];
+		boolean show = false;
+		for(int i = 0; i < buffers.length; i++)
+		{
+			states[i] = buffers[i].checkFileStatus(view);
+			if(states[i] != Buffer.FILE_NOT_CHANGED)
+				show = true;
+		}
+
+		// still need to call the status check even if the option is off,
+		// so that the write protection is updated if it changes on disk
+		if(!getBooleanProperty("view.checkModStatus"))
+			return;
+
+		if(show)
+			new FilesChangedDialog(view,states);
 	} //}}}
 
 	//}}}
